tests/fixtures/invalid/pow_int_none_str.py
# Cannot call pow() with Int, None, Str
x = pow(1, None, "hello")
